# magic-case

./: .gitignore  LICENSE  README.md
.github/workflows/: pypi-publish.yml  python-tests.yml  release.yml
js/: .gitignore  README.md  index.js  package.json
python/: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  TESTING.md  pyproject.toml  pytest.ini  run_tests.py
python/magic_case/: __init__.py  base.py  camel.py  camel_snake.py  core.py  dot.py  flat.py  http_header.py  hungarian.py  kebab.py  macro.py  pascal.py  pascal_snake.py  path.py  sentence.py  slash_title.py  snake.py  space.py  title.py  upper.py
python/scripts/: check.py  release.py
python/tests/: conftest.py  test_magic_case.py  test_magic_cases_enhanced.py
