[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "magic-case"
version = "0.2.0"
description = "Lightweight utilities for converting strings between common cases"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = []

[project.urls]
Homepage = "https://pypi.org/project/magic-case/"
Repository = "https://github.com/your-org/magic-case"

[tool.hatch.build.targets.wheel]
packages = ["magic_case"]
