[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "magic-case"
version = "0.3.0"
description = "Lightweight utilities for converting strings between common cases"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Shubhro Shekhar", email = "shubhroshekhar@gmail.com", url = "https://github.com/shubhroshekhar" }]
dependencies = []

[project.urls]
Homepage = "https://pypi.org/project/magic-case/"
Repository = "https://github.com/your-org/magic-case"

[tool.hatch.build.targets.wheel]
packages = ["magic_case"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0.0",
  "ruff>=0.3.0",
  "pre-commit>=3.0.0",
  "build>=1.0.0",
  "twine>=4.0.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
